--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,8 @@ body {
 
 .nav {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  /* justify-content: space-around; */
+  /* align-items: center; */
   min-height: 8vh;
 }
 
