--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'roboto', bold;
+  /* font-family: 'roboto', bold; */
   font-size: 1em;
   font-weight: 300;
   line-height: 1.8em;
